I fixed the layout of the page to remove the extra padding and the JS was updated to just add strings to the table rows instead of all the text content including metadata and tags.

--- a/Sass/wk_7_xml.scss
+++ b/Sass/wk_7_xml.scss
@@ -5,9 +5,8 @@ $uchicago-dark-gray: #767676;
 $black: #000000;
 $white: #FFFFFF;
 $font-stack: "EB Garamond", serif;
-$std-margin-left: 15px;
 
-body {text-align: center; margin: $std-margin-left; background-color: $uchicago-light-gray;
+body {text-align: center; background-color: $uchicago-light-gray;
     color: $uchicago-maroon; font-family: $font-stack; padding-bottom: 200px;}
 
     nav {background-color: $uchicago-maroon;
