--- a/Tech_Presentation/Week_3/scss/styles.css
+++ b/Tech_Presentation/Week_3/scss/styles.css
@@ -2,7 +2,6 @@
 body {
   text-align: center;
   width: 100%;
-  margin: 15px;
   background-color: #D6D6CE;
   color: #800000;
   font-family: "EB Garamond", serif;
